story #15455 test: fix broken tests